2006-11-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	Added program-number to properties.

2006-11-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Output PAT and PMT info at debug level when changed.

2006-11-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Add a translatable message.
	Fix dvb-type: FILE.
	Add queues after tee.
	* flumotion/component/dvb/dvbbin.py:
	initial import of a DvbBin that does close interaction between
	dvbsrc and flutsdemux.

2006-11-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Do not require frequency as it's not required for files.
	Only pass freq and pids to dvbsrc not to filesrc as well.
	Make sure FILE uses identity sync=true.

2006-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Device has a default, don't require it for S and T.

2006-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Add pixel-aspect-ratio property.

2006-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Use bi-linear video scaling.

2006-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Add device property so we can actually select adapter we want
	to use for DVB-S and DVB-T.
	Require filename parameter for dvb-type: FILE.

2006-11-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  remove pygtk dep

2006-11-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* flumotion/component/dvb/dvb.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_sample_admin_gtk.py:
	* flumotion/test/test_sample_common.py:
	* po/Makevars: